update complete first phase v.2

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 
 <div id="header">
-  <div class="top-menu-wrapper">
+  <div class="top-menu-wrapper" id="top-menu-wrapper">
       <div class="wrapper">
           <div class="row">
               <div class="col-md-8 hidden-sm hidden-xs top-main-nav">
@@ -76,25 +76,25 @@
   <div class="bottom-menu-wrapper" id="fixed-nav">
       <div class="wrapper">
           <div class="row">
-              <div class="col-lg-4 col-md-2 col-xs-4">
+              <div class="col-lg-5 col-md-2 col-xs-4">
                   <h1 class="logo">
                       <a href="/">
-                          <img src="/assets/Images/logos/logo.png" class="visible-lg-block" />
+                          <img src="/assets/Images/logos/logo-m.png" class="visible-lg-block" />
                           <img src="/assets/Images/logos/logo-m.png" class="visible-md-block visible-sm-block visible-xs-block" />
                       </a>
                   </h1>
               </div>
 
-              <div class="col-lg-8 col-md-10 col-xs-8">
+              <div class="col-lg-7 col-md-10 col-xs-8">
                   <nav id="main-nav" class="main-nav">
                       <div id="menu" class="main-nav-list hidden-sm hidden-xs">
                           <ul id="bottom-main-nav" >
-                              <li id="mutual"><a routerLink="/myport" title="My Port">My Port <span class="icon"></span></a></li>
-                              <li id="private"><a routerLink="/transaction" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
-                              <li id="provident"><a routerLink="/rmf-ltf" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
-                              <li id="property"><a routerLink="/report" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
-                              <li id="investor"><a routerLink="/regular-list" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a></li>
-                              <li id="news"><a routerLink="/profile" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
+                              <li id="myport"><a routerLink="/myport" title="My Port">My Port <span class="icon"></span></a></li>
+                              <li id="transaction"><a routerLink="/transaction" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
+                              <li id="rmf-ltf"><a routerLink="/rmf-ltf" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
+                              <li id="report"><a routerLink="/report" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
+                              <li id="regular-list"><a routerLink="/regular-list" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a></li>
+                              <li id="profile"><a routerLink="/profile" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
                           </ul>                           
                       </div>
                       <!-- <div class="header-clicker">
