--- a/src/assets/Content/default/css/content/login.css
+++ b/src/assets/Content/default/css/content/login.css
@@ -61,7 +61,7 @@
   width: 100%;
   z-index: 1;
   text-decoration: none;
-  margin-top: 40%;
+  margin-top: 45%;
   position: relative; }
   @media screen and (max-width: 767px) {
     .copyright {
@@ -112,12 +112,10 @@
     font-size: 24px;
     line-height: 20px; }
 
-#main-wrapper.main-login-wrapper {
-  padding-top: 200px; }
-  @media screen and (max-width: 767px) {
-    #main-wrapper.main-login-wrapper {
-      padding-top: 70px;
-      overflow: auto; } }
+@media screen and (max-width: 767px) {
+  #main-wrapper.main-login-wrapper {
+    padding-top: 70px;
+    overflow: auto; } }
 
 .login-icon {
   position: relative;
@@ -136,6 +134,14 @@
   max-width: 100%;
   padding: 0;
   margin: 0 auto; }
+  .contact-wrapper .detail-login-wrapper {
+    position: relative;
+    max-width: 100%;
+    padding: 30px 40px 20px 40px;
+    margin: 0 auto;
+    width: 100%; }
+    .contact-wrapper .detail-login-wrapper h4 {
+      display: block; }
   .contact-wrapper .contact-popup {
     position: static;
     display: inline-block;
@@ -169,9 +175,13 @@
     display: none !important; }
     @media screen and (max-width: 767px) {
       .contact-wrapper .xs-show {
-        display: block !important; } }
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
+        display: flex !important; } }
   .contact-wrapper .xs-hide {
-    display: block !important; }
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important; }
     @media screen and (max-width: 767px) {
       .contact-wrapper .xs-hide {
         display: none !important; } }
@@ -184,7 +194,7 @@
     min-height: 460px;
     min-width: 100%;
     right: 0;
-    top: 20px;
+    top: 150px;
     opacity: 1;
     z-index: 1;
     text-align: left;
@@ -283,10 +293,6 @@
       text-align: left;
       color: #C90A11;
       margin-top: 7px; }
-    .contact-wrapper .popup-content .btn-primary p {
-      text-align: left;
-      color: #1CA59B;
-      margin-top: 7px; }
     .contact-wrapper .popup-content .btn-wrapper-right {
       text-align: right;
       -webkit-box-pack: end;
@@ -308,11 +314,11 @@
         margin-top: 7px; }
   .contact-wrapper .popup-side-content-left {
     position: absolute;
-    background: #1CA59B;
+    background: rgba(28, 165, 155, 0.8);
     height: 460px;
     max-width: 100%;
     right: 0;
-    top: 20px;
+    top: 150px;
     opacity: 1;
     z-index: 1;
     text-align: left;
@@ -357,28 +363,6 @@
           .contact-wrapper .popup-side-content-left ul li.current a:hover {
             color: #000;
             text-decoration: none; }
-    .contact-wrapper .popup-side-content-left .btn-blue {
-      position: relative;
-      color: #fff;
-      border: 1px solid #00698C;
-      background-color: #00698C;
-      display: inline-block;
-      vertical-align: middle;
-      cursor: pointer;
-      padding: 0 30 0 10px;
-      margin: 0 auto;
-      font-family: "KitithadaBold";
-      min-width: 100%;
-      height: 42px;
-      -webkit-transition: all 0.2s ease-in-out;
-      -moz-transition: all 0.2s ease-in-out;
-      -o-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out;
-      text-decoration: none; }
-      .contact-wrapper .popup-side-content-left .btn-blue:hover {
-        color: #fff;
-        border: 1px solid #000;
-        background-color: #000; }
     .contact-wrapper .popup-side-content-left .btn-close {
       position: absolute;
       top: 10px;
@@ -435,12 +419,12 @@
         margin-top: 7px; }
   .contact-wrapper .popup-side-content-right {
     position: absolute;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(28, 165, 155, 0.8);
     float: right;
     min-width: 100%;
     min-height: 460px;
     right: 0;
-    top: 20px;
+    top: 150px;
     opacity: 1;
     z-index: 1;
     text-align: left;
@@ -452,11 +436,11 @@
     @media screen and (max-width: 767px) {
       .contact-wrapper .popup-side-content-right {
         position: relative;
-        background: #1CA59B;
+        background: rgba(28, 165, 155, 0.8);
         min-height: auto; } }
     .contact-wrapper .popup-side-content-right h1, .contact-wrapper .popup-side-content-right h2, .contact-wrapper .popup-side-content-right h3 {
       margin: 0;
-      color: #1CA59B;
+      color: #fff;
       text-align: center; }
       @media screen and (max-width: 767px) {
         .contact-wrapper .popup-side-content-right h1, .contact-wrapper .popup-side-content-right h2, .contact-wrapper .popup-side-content-right h3 {
@@ -464,7 +448,7 @@
     .contact-wrapper .popup-side-content-right p {
       font-size: 22px;
       line-height: 24px;
-      color: #1CA59B;
+      color: #fff;
       text-align: center; }
       @media screen and (max-width: 767px) {
         .contact-wrapper .popup-side-content-right p {
@@ -495,84 +479,11 @@
             color: #000;
             text-decoration: none; }
         .contact-wrapper .popup-side-content-right ul li.current a {
-          color: #1CA59B;
+          color: #fff;
           text-decoration: underline; }
           .contact-wrapper .popup-side-content-right ul li.current a:hover {
             color: #000;
             text-decoration: none; }
-    .contact-wrapper .popup-side-content-right .btn-signin {
-      position: relative;
-      color: #1CA59B;
-      border: 1px solid #1CA59B;
-      background-color: transparent;
-      display: inline-block;
-      vertical-align: middle;
-      cursor: pointer;
-      padding: 0 30 0 10px;
-      margin: 0 auto;
-      font-family: "KitithadaBold";
-      min-width: 50%;
-      height: 42px;
-      -webkit-transition: all 0.2s ease-in-out;
-      -moz-transition: all 0.2s ease-in-out;
-      -o-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out;
-      text-decoration: none; }
-      @media screen and (max-width: 767px) {
-        .contact-wrapper .popup-side-content-right .btn-signin {
-          border: 1px solid #fff; } }
-      .contact-wrapper .popup-side-content-right .btn-signin:hover {
-        color: #fff;
-        border: 1px solid #000;
-        background-color: #000; }
-    .contact-wrapper .popup-side-content-right .btn-next {
-      position: relative;
-      color: #fff !important;
-      border: 1px solid #1CA59B;
-      background-color: #1CA59B;
-      display: inline-block;
-      vertical-align: middle;
-      cursor: pointer;
-      margin: 0 auto;
-      font-family: "KitithadaBold";
-      min-width: 100%;
-      height: 42px;
-      -webkit-transition: all 0.2s ease-in-out;
-      -moz-transition: all 0.2s ease-in-out;
-      -o-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out;
-      text-decoration: none; }
-      .contact-wrapper .popup-side-content-right .btn-next:hover {
-        color: #fff;
-        border: 1px solid #000;
-        background-color: #000; }
-      .contact-wrapper .popup-side-content-right .btn-next p {
-        width: 100%;
-        color: #fff !important; }
-    .contact-wrapper .popup-side-content-right .btn-red {
-      position: relative;
-      color: #fff !important;
-      border: 1px solid #C90A11;
-      background-color: #C90A11;
-      display: inline-block;
-      vertical-align: middle;
-      cursor: pointer;
-      margin: 0 auto;
-      font-family: "KitithadaBold";
-      min-width: 100%;
-      height: 42px;
-      -webkit-transition: all 0.2s ease-in-out;
-      -moz-transition: all 0.2s ease-in-out;
-      -o-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out;
-      text-decoration: none; }
-      .contact-wrapper .popup-side-content-right .btn-red:hover {
-        color: #fff;
-        border: 1px solid #000;
-        background-color: #000; }
-      .contact-wrapper .popup-side-content-right .btn-red p {
-        width: 100%;
-        color: #fff !important; }
     .contact-wrapper .popup-side-content-right .btn-close {
       position: absolute;
       top: 10px;
