--- a/src/assets/Content/default/sass/content/login.scss
+++ b/src/assets/Content/default/sass/content/login.scss
@@ -50,7 +50,7 @@
     width: 100%;
     z-index: 1;
     text-decoration: none;
-    margin-top: 40%;
+    margin-top: 45%;
     position: relative; 
     
     @media screen and (max-width: 767px){    
@@ -119,7 +119,7 @@
 
 }
 #main-wrapper.main-login-wrapper{
-    padding-top: 200px;
+    // padding-top: 200px;
     @media screen and (max-width: 767px){
         padding-top: 70px;
         overflow: auto;
@@ -158,6 +158,17 @@
     padding: 0;
     margin: 0 auto;
     // margin-bottom: 400px;
+    .detail-login-wrapper{
+        position: relative;
+        max-width: 100%;
+        padding: 30px 40px 20px 40px;
+        margin: 0 auto;
+        // border-bottom: 5px solid #f5f5f5;
+        width: 100%;
+        h4{
+            display: block;
+        }
+    }
 
     
 
@@ -209,11 +220,11 @@
     .xs-show{
         display: none !important;
         @media screen and (max-width: 767px){    
-            display: block !important;
+            display: flex !important;
         }  
     }
     .xs-hide{
-        display: block !important;
+        display: flex !important;
         @media screen and (max-width: 767px){    
             display: none !important;
         }  
@@ -232,7 +243,7 @@
         min-width: 100%;
         // border: 1px solid #a9a9a9;
         right: 0;
-        top: 20px;
+        top: 150px;
         opacity: 1;
         z-index: 1;
         text-align: left;
@@ -377,11 +388,11 @@
         }
         .btn-primary {
             
-            p {
-                text-align: left;
-                color: $color-primary;
-                margin-top: 7px;
-            }
+            // p {
+            //     text-align: left;
+            //     color: $color-primary;
+            //     margin-top: 7px;
+            // }
             
         }
 
@@ -415,13 +426,13 @@
     .popup-side-content-left {      
 
         position: absolute;
-        background: $color-primary;
+        background: rgba(28, 165, 155, 0.8);
         
         height: 460px;
         max-width: 100%;
         // border: 1px solid #a9a9a9;
         right: 0;
-        top: 20px;
+        top: 150px;
         opacity: 1;
         z-index: 1;
         text-align: left;
@@ -489,38 +500,6 @@
                 }
             }
         }
-        .btn-blue {
-            position: relative;
-            color: $color-white;
-            border: 1px solid $color-blue;
-            background-color: $color-blue;
-    
-            display: inline-block;
-            vertical-align: middle;
-            cursor: pointer;
-            padding: 0 30 0 10px;
-            margin: 0 auto;
-            // text-align: center;
-            font-family: $default-font;
-            // color: $color-hover;
-            min-width: 100%;
-            height: 42px;
-            // text-transform: uppercase;
-            // background-color: transparent;
-            -webkit-transition: all 0.2s ease-in-out;
-            -moz-transition: all 0.2s ease-in-out;
-            transition: all 0.2s ease-in-out;
-            text-decoration: none;
-    
-            &:hover {
-                color: $color-white;
-                border: 1px solid $color-hover;
-                background-color: $color-hover;
-            }           
-        }
-        
-
-
         .btn-close {
             position: absolute;
             top: 10px;
@@ -601,13 +580,13 @@
     }
     .popup-side-content-right {
         position: absolute;
-        background: rgba(255, 255, 255, 0.8);
+        background: rgba(28, 165, 155, 0.8);
         float: right;
         min-width: 100%;
         min-height: 460px;
         // border: 1px solid #a9a9a9;
         right: 0;
-        top: 20px;
+        top: 150px;
         opacity: 1;
         z-index: 1;
         text-align: left;
@@ -620,7 +599,7 @@
 
         @media screen and (max-width: 767px){
             position: relative;
-            background: $color-primary;
+            background: rgba(28, 165, 155, 0.8);
             min-height: auto;
             // color: $color-white !important;
         }
@@ -628,7 +607,7 @@
         h1, h2, h3 {
             margin: 0;
             // margin-bottom: 20px;
-            color: $color-primary;
+            color: $color-white;
             text-align: center;
 
             @media screen and (max-width: 767px){
@@ -641,7 +620,7 @@
         p {
             font-size: $text-content;
             line-height: $text-x-small;
-            color: $color-primary;
+            color: $color-white;
             text-align: center;
 
             @media screen and (max-width: 767px){
@@ -690,7 +669,7 @@
 
                 &.current {
                     a {
-                        color: $color-primary;
+                        color: $color-white;
                         text-decoration: underline;
 
                         &:hover {
@@ -701,107 +680,7 @@
                 }
             }
         }
-        .btn-signin {
-            position: relative;
-            color: $color-primary;
-            border: 1px solid $color-primary;
-            background-color: transparent;
-    
-            display: inline-block;
-            vertical-align: middle;
-            cursor: pointer;
-            padding: 0 30 0 10px;
-            margin: 0 auto;
-            // text-align: center;
-            font-family: $default-font;
-            // color: $color-hover;
-            min-width: 50%;
-            height: 42px;
-            // text-transform: uppercase;
-            // background-color: transparent;
-            -webkit-transition: all 0.2s ease-in-out;
-            -moz-transition: all 0.2s ease-in-out;
-            transition: all 0.2s ease-in-out;
-            text-decoration: none;
-
-            @media screen and (max-width: 767px){             
-                // color: $color-primary;
-                border: 1px solid $color-white;
-            }
-    
-            &:hover {
-                color: $color-white;
-                border: 1px solid $color-hover;
-                background-color: $color-hover;
-            } 
-                    
-        }
-        .btn-next {
-            position: relative;
-            color: $color-white !important;
-            border: 1px solid $color-primary;
-            background-color: $color-primary;
-    
-            display: inline-block;
-            vertical-align: middle;
-            cursor: pointer;
-            // padding: 0 30 0 10px;
-            margin: 0 auto;
-            // text-align: center;
-            font-family: $default-font;
-            // color: $color-hover;
-            min-width: 100%;
-            height: 42px;
-            // text-transform: uppercase;
-            // background-color: transparent;
-            -webkit-transition: all 0.2s ease-in-out;
-            -moz-transition: all 0.2s ease-in-out;
-            transition: all 0.2s ease-in-out;
-            text-decoration: none;
-    
-            &:hover {
-                color: $color-white;
-                border: 1px solid $color-hover;
-                background-color: $color-hover;
-            }
-            p{
-                width: 100%;
-                color: $color-white !important;
-            }
-        }
-        .btn-red {
-            position: relative;
-            color: $color-white !important;
-            border: 1px solid $color-red;
-            background-color: $color-red;
-    
-            display: inline-block;
-            vertical-align: middle;
-            cursor: pointer;
-            // padding: 0 30 0 10px;
-            margin: 0 auto;
-            // text-align: center;
-            font-family: $default-font;
-            // color: $color-hover;
-            min-width: 100%;
-            height: 42px;
-            // text-transform: uppercase;
-            // background-color: transparent;
-            -webkit-transition: all 0.2s ease-in-out;
-            -moz-transition: all 0.2s ease-in-out;
-            transition: all 0.2s ease-in-out;
-            text-decoration: none;
-    
-            &:hover {
-                color: $color-white;
-                border: 1px solid $color-hover;
-                background-color: $color-hover;
-            }
-            p{
-                width: 100%;
-                color: $color-white !important;
-            }
-        }
+        
 
         .btn-close {
             position: absolute;
