--- a/src/assets/Content/default/sass/content/myport.scss
+++ b/src/assets/Content/default/sass/content/myport.scss
@@ -10,6 +10,71 @@
 // }
 // .footer_sub{
 //     display: block !important;
+
+.score-wrapper{
+    overflow: hidden;
+    position: relative;
+
+    .score-result{
+        padding: 0 20px;
+        margin-bottom: 30px;
+        overflow: hidden;
+    }
+    .score-row{
+        margin-bottom: 40px;
+        overflow: hidden;
+    }
+
+    .score-col-left{
+        float: left;
+        width: 380px;
+        margin-right: 25px;
+    }
+    .score-col-right{
+        float: left;
+        width: auto;
+    }
+    // .rate-content{
+    //     margin-top: 55px;
+    //     padding-left: 30px;
+    //     color: #3e4d62;
+    //     font-size: 30px;
+    //     background-image: url('../images/bg-score-rate.jpg');
+    //     background-position: 0px 0px;
+    //     background-repeat: no-repeat;
+    // }
+    .score-content{
+        position: relative;
+        font-size: 30px;
+        // color: $color-primary;
+        text-align: center;
+        /*background: url('../images/bg-score.jpg') bottom right no-repeat;*/
+        // background-image: url('../images/bg-score.jpg');
+        // background-position: 320px 55px;
+        // background-repeat: no-repeat;
+
+        .score-display{
+            display: inline-block;
+            width: 100px;
+            height: 100px;
+            margin: 5px 5px;
+            padding: 0px;
+            background-color: $color-primary;
+            color: #fff;
+            line-height: 100px;
+            text-align: center;
+            /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+            -webkit-border-radius: 50px;
+            /* Firefox 1-3.6 */
+            -moz-border-radius: 50px;
+            /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+            border-radius: 50px;
+            font-size: 72px;
+            vertical-align: middle;
+        }
+    }
+
+}
 .open-account-wrapper{
     /*padding: 35px 0 105px 0;*/
     background-color: #f0f0f0;
@@ -66,6 +131,8 @@ h4{
 //   -moz-box-shadow:    0px 5px 5px 0px rgba(50, 50, 50, 0.75);
 //   box-shadow:         0px 5px 5px 0px rgba(50, 50, 50, 0.75);
   overflow: hidden;
+
+
 
   .title-box{
     padding-bottom: 25px;
@@ -368,7 +435,25 @@ h4{
       @media screen and (max-width: 767px) {
         padding: 0 15px;
       }
-    }       
+    }
+    // .lbl_custom{
+    //     display: block;
+    //     position: relative;
+    //     padding: 5px 10px 5px 10px;
+    //     // margin: 0 auto;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //     height: auto;
+    //     z-index: 9;
+    //     cursor: pointer;
+    //     -webkit-transition: all 0.25s linear;
+    //     font-weight: normal;
+    //   }
+    //   &:hover{
+    //     label.lbl_custom{
+    //       color: $color-primary;
+    //     }
+    //   }
 
     .form-check{
       position: relative;
@@ -570,6 +655,7 @@ h4{
     .wrap-suitability{
       .control-label{
         margin: 0;
+        display: unset;
       }
       .label-txt{
         border-bottom: 5px solid $color-primary;
@@ -806,6 +892,10 @@ background-color: $color-secondary;
         color: $color-primary !important;
         display: unset;
     }
+    h2{
+        color: $color-primary !important;
+        display: block;
+    }
     span{
         color: $color-primary;
     }
@@ -823,7 +913,7 @@ background-color: $color-secondary;
     }
         
     .fund-list-wrapper {
-        margin-top: 20px;
+        margin: 20px 0px;
     }
     .detail-head-wrapper{
         position: relative;
@@ -840,6 +930,10 @@ background-color: $color-secondary;
         margin: 0 auto;
         border-bottom: 5px solid #f5f5f5;
         width: 100%;
+
+        h4{
+            display: block;
+        }
     }
     .detail-footer-wrapper{
         position: relative;
@@ -855,6 +949,7 @@ background-color: $color-secondary;
     }
 
     .fund-table-wrapper {
+       
         
         .graph-wrapper {
             padding: 25px 20px;
